# free_gait_trajectory_optimization

./: CMakeLists.txt  README.md  package.xml
include/free_gait_trajectory_optimization/: ReceiveTrajectory.hpp  SendTrajectory.hpp  SolveTrajectoryOptimization.hpp
launch/: free_gait_trajectory_optimization.launch
src/: ReceiveTrajectory.cpp  SendTrajectory.cpp  SolveTrajectoryOptimization.cpp  free_gait_trajectory_optimization_node.cpp  free_gait_trajectory_optimization_rviz.cpp
